# stockexperts

./: .gitignore  2024-11-08_stock_report.md  2024-11-08_stock_research_results.md  2024-11-09_compare_stock_report.md  2024-11-09_compare_stock_research_results.md  2024-11-09_search_stock_report.md  2024-11-09_search_stock_research_results.md  2024-11-09_stock_report1.md  2024-11-09_stock_research_results2.md  README.md  pyproject-old.toml  pyproject.toml  report.md  stock_report.md  stock_research_results.md  stock_search_layout.py
src/: main.py  report.md  stock_analyzer.py
src/stockexperts/: crew.py  pdf_generator.py
src/stockexperts/config/: agents.yaml  tasks.yaml
